feat:온보딩페이지 기능 구현, 로그인 여부에 따른 최초 화면 정책 변경

--- a/ReadingPiece/View/WalkThrough.storyboard
+++ b/ReadingPiece/View/WalkThrough.storyboard
@@ -8,6 +8,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NotoSansCJKkr-Medium.otf">
+            <string>NotoSansCJKkr-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Walk Through View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -18,17 +23,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMs-yg-JFZ">
-                                <rect key="frame" x="32" y="676" width="350" height="46"/>
+                                <rect key="frame" x="32" y="714" width="350" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="dCT-41-CiM"/>
+                                </constraints>
                                 <state key="normal" backgroundImage="selectedNext"/>
                                 <connections>
                                     <action selector="didNextButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="0dM-3p-RAz"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookCoverImage2" translatesAutoresizingMaskIntoConstraints="NO" id="igT-G5-dia">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1_walkthrough" translatesAutoresizingMaskIntoConstraints="NO" id="igT-G5-dia">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S0b-vn-IoP">
-                                <rect key="frame" x="318" y="108" width="52" height="30"/>
+                                <rect key="frame" x="314" y="108" width="56" height="35"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="15"/>
                                 <state key="normal" title="건너뛰기"/>
                                 <connections>
                                     <action selector="didSkipIntroButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="wdK-ol-IHK"/>
@@ -41,11 +50,10 @@
                             <constraint firstItem="igT-G5-dia" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="6vU-0J-LTV"/>
                             <constraint firstItem="LMs-yg-JFZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="LLn-Zx-E8S"/>
                             <constraint firstItem="S0b-vn-IoP" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="Laq-DW-vjD"/>
-                            <constraint firstItem="LMs-yg-JFZ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="-186" id="UJo-K5-gOg"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="igT-G5-dia" secondAttribute="trailing" id="bl1-Ng-iVf"/>
                             <constraint firstItem="igT-G5-dia" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="j0f-BM-BNA"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="LMs-yg-JFZ" secondAttribute="trailing" constant="32" id="ldL-PT-DHs"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="LMs-yg-JFZ" secondAttribute="bottom" constant="140" id="oUa-PY-qOh"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="LMs-yg-JFZ" secondAttribute="bottom" multiplier="0.95" constant="140" id="oUa-PY-qOh"/>
                             <constraint firstItem="S0b-vn-IoP" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="rEe-as-eSs"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="igT-G5-dia" secondAttribute="bottom" id="rEe-ge-l5v"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="S0b-vn-IoP" secondAttribute="trailing" constant="44" id="sqY-IF-ICa"/>
@@ -72,17 +80,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zn1-zZ-s4n">
-                                <rect key="frame" x="32" y="676" width="350" height="46"/>
+                                <rect key="frame" x="32" y="714" width="350" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="zep-sQ-MeC"/>
+                                </constraints>
                                 <state key="normal" backgroundImage="selectedNext"/>
                                 <connections>
                                     <action selector="didNextButtonClicked:" destination="4zr-Gl-UZ7" eventType="touchUpInside" id="8xQ-R1-aJg"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bokeh" translatesAutoresizingMaskIntoConstraints="NO" id="nmw-PT-Ups">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2_walkthrough" translatesAutoresizingMaskIntoConstraints="NO" id="nmw-PT-Ups">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7by-oV-XG3">
-                                <rect key="frame" x="318" y="64" width="52" height="30"/>
+                                <rect key="frame" x="314" y="64" width="56" height="35"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="15"/>
                                 <state key="normal" title="건너뛰기"/>
                                 <connections>
                                     <action selector="didSkipIntroButtonClicked:" destination="4zr-Gl-UZ7" eventType="touchUpInside" id="Uh2-Sm-qao"/>
@@ -92,12 +104,11 @@
                         <viewLayoutGuide key="safeArea" id="0g9-jC-Yvh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0g9-jC-Yvh" firstAttribute="bottom" secondItem="Zn1-zZ-s4n" secondAttribute="bottom" constant="140" id="1Y3-o8-QVC"/>
+                            <constraint firstItem="0g9-jC-Yvh" firstAttribute="bottom" secondItem="Zn1-zZ-s4n" secondAttribute="bottom" multiplier="0.95" constant="140" id="1Y3-o8-QVC"/>
                             <constraint firstItem="0g9-jC-Yvh" firstAttribute="trailing" secondItem="7by-oV-XG3" secondAttribute="trailing" constant="44" id="5ox-8v-HFI"/>
                             <constraint firstItem="nmw-PT-Ups" firstAttribute="leading" secondItem="0g9-jC-Yvh" secondAttribute="leading" id="7Ek-og-fDy"/>
                             <constraint firstItem="0g9-jC-Yvh" firstAttribute="trailing" secondItem="nmw-PT-Ups" secondAttribute="trailing" id="9qE-GP-3OB"/>
                             <constraint firstItem="nmw-PT-Ups" firstAttribute="top" secondItem="Ezt-gM-Aun" secondAttribute="top" id="KfF-yv-JL0"/>
-                            <constraint firstItem="Zn1-zZ-s4n" firstAttribute="top" secondItem="0g9-jC-Yvh" secondAttribute="bottom" constant="-186" id="UI4-1e-pqX"/>
                             <constraint firstItem="0g9-jC-Yvh" firstAttribute="bottom" secondItem="nmw-PT-Ups" secondAttribute="bottom" id="ZGB-Ur-8Vc"/>
                             <constraint firstItem="7by-oV-XG3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0g9-jC-Yvh" secondAttribute="leading" constant="10" id="aNN-SK-E1Z"/>
                             <constraint firstItem="0g9-jC-Yvh" firstAttribute="trailing" secondItem="Zn1-zZ-s4n" secondAttribute="trailing" constant="32" id="b6s-5M-ncX"/>
@@ -126,17 +137,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aq9-vn-iBg">
-                                <rect key="frame" x="32" y="676" width="350" height="46"/>
-                                <state key="normal" backgroundImage="selectedNext"/>
+                                <rect key="frame" x="32" y="714" width="350" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="v7O-YT-gB8"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="appStartButton"/>
                                 <connections>
                                     <action selector="didNextButtonClicked:" destination="xQG-se-Gpx" eventType="touchUpInside" id="KVC-wy-vdK"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookCoverImage4" translatesAutoresizingMaskIntoConstraints="NO" id="IMe-qY-0IH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3_walkthrough" translatesAutoresizingMaskIntoConstraints="NO" id="IMe-qY-0IH">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wju-ND-JwX">
-                                <rect key="frame" x="318" y="64" width="52" height="30"/>
+                                <rect key="frame" x="314" y="64" width="56" height="35"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="15"/>
                                 <state key="normal" title="건너뛰기"/>
                                 <connections>
                                     <action selector="didSkipIntroButtonClicked:" destination="xQG-se-Gpx" eventType="touchUpInside" id="ocb-z5-bXe"/>
@@ -146,7 +161,6 @@
                         <viewLayoutGuide key="safeArea" id="19k-5k-Nts"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="aq9-vn-iBg" firstAttribute="top" secondItem="19k-5k-Nts" secondAttribute="bottom" constant="-186" id="3qr-yb-bal"/>
                             <constraint firstItem="19k-5k-Nts" firstAttribute="trailing" secondItem="Wju-ND-JwX" secondAttribute="trailing" constant="44" id="5WP-zZ-p9l"/>
                             <constraint firstItem="19k-5k-Nts" firstAttribute="bottom" secondItem="IMe-qY-0IH" secondAttribute="bottom" id="Czk-uZ-Lrs"/>
                             <constraint firstItem="aq9-vn-iBg" firstAttribute="leading" secondItem="19k-5k-Nts" secondAttribute="leading" constant="32" id="KTZ-tt-KLe"/>
@@ -154,7 +168,7 @@
                             <constraint firstItem="IMe-qY-0IH" firstAttribute="leading" secondItem="19k-5k-Nts" secondAttribute="leading" id="X0P-kk-OEy"/>
                             <constraint firstItem="19k-5k-Nts" firstAttribute="trailing" secondItem="aq9-vn-iBg" secondAttribute="trailing" constant="32" id="ZZO-Mg-a6M"/>
                             <constraint firstItem="19k-5k-Nts" firstAttribute="trailing" secondItem="IMe-qY-0IH" secondAttribute="trailing" id="agd-2d-4Et"/>
-                            <constraint firstItem="19k-5k-Nts" firstAttribute="bottom" secondItem="aq9-vn-iBg" secondAttribute="bottom" constant="140" id="gdr-xw-vca"/>
+                            <constraint firstItem="19k-5k-Nts" firstAttribute="bottom" secondItem="aq9-vn-iBg" secondAttribute="bottom" multiplier="0.95" constant="140" id="gdr-xw-vca"/>
                             <constraint firstItem="IMe-qY-0IH" firstAttribute="top" secondItem="KJN-3L-Qe1" secondAttribute="top" id="hVq-eM-XFI"/>
                             <constraint firstItem="aq9-vn-iBg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="19k-5k-Nts" secondAttribute="top" constant="10" id="mxU-o4-A8o"/>
                             <constraint firstItem="Wju-ND-JwX" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="19k-5k-Nts" secondAttribute="leading" constant="10" id="pbz-Ek-edl"/>
@@ -190,9 +204,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bokeh" width="64" height="64"/>
-        <image name="bookCoverImage2" width="76" height="102.5"/>
-        <image name="bookCoverImage4" width="89" height="120"/>
+        <image name="1_walkthrough" width="1500" height="3248"/>
+        <image name="2_walkthrough" width="1500" height="3248"/>
+        <image name="3_walkthrough" width="1500" height="3248"/>
+        <image name="appStartButton" width="936" height="138"/>
         <image name="selectedNext" width="312" height="46"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
